--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,7 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  # Disable secret scanning for admin PIN (we know it's in the frontend)
+  SECRETS_SCAN_OMIT_KEYS = "VITE_ADMIN_PIN"
